force-app/main/default/objects/CornerstoneMappings__c/CornerstoneMappings__c.object-meta.xml
<CustomObject>
    <label>CornerstoneMapping</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>MappingID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CornerstoneMappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>