force-app/main/default/objects/CornerstoneMappings__c/fields/CornerstoneID__c.field-meta.xml
<CustomField>
    <fullName>CornerstoneID__c</fullName>
    <label>Cornerstone ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>