force-app/main/default/objects/CornerstoneMappings__c/fields/LongValue__c.field-meta.xml
<CustomField>
    <fullName>LongValue__c</fullName>
    <label>LongValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>