force-app/main/default/objects/CornerstoneMappings__c/fields/ParenetLookupKeyID__c.field-meta.xml
<CustomField>
    <fullName>ParenetLookupKeyID__c</fullName>
    <description>Cornerstone Lookup ID</description>
    <label>ParenetLookupKeyID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>