force-app/main/default/objects/CornerstoneMappings__c/fields/ParentLookupItem__c.field-meta.xml
<CustomField>
    <fullName>ParentLookupItem__c</fullName>
    <label>ParentLookupItem</label>
    <length>32</length>
    <type>Text</type>
</CustomField>