force-app/main/default/objects/CornerstoneMappings__c/fields/ParentLookupItemKey__c.field-meta.xml
<CustomField>
    <fullName>ParentLookupItemKey__c</fullName>
    <description>Parent Lookup Item Key</description>
    <label>ParentLookupItemKey</label>
    <length>32</length>
    <type>Text</type>
</CustomField>