force-app/main/default/objects/CornerstoneMappings__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SysRole</fullName>
            </value>
            <value>
                <fullName>Office\Salutations</fullName>
            </value>
            <value>
                <fullName>Office\Name-Suffix</fullName>
            </value>
            <value>
                <fullName>Office/streetTypes</fullName>
            </value>
            <value>
                <fullName>Office/unitDesignation</fullName>
            </value>
            <value>
                <fullName>Office/streetDirections</fullName>
            </value>
            <value>
                <fullName>Office/systemLocales</fullName>
            </value>
            <value>
                <fullName>Office/subSystemLocales</fullName>
            </value>
            <value>
                <fullName>Office/country</fullName>
            </value>
            <value>
                <fullName>Office/state</fullName>
            </value>
            <value>
                <fullName>Office/county</fullName>
            </value>
            <value>
                <fullName>Office/city</fullName>
            </value>
            <value>
                <fullName>Agent/nameSuffix</fullName>
            </value>
            <value>
                <fullName>Agent/salutation</fullName>
            </value>
            <value>
                <fullName>Agent/streetTypes</fullName>
            </value>
            <value>
                <fullName>Agent/unitDesignation</fullName>
            </value>
            <value>
                <fullName>Agent/streetDirections</fullName>
            </value>
            <value>
                <fullName>Agent/systemLocales</fullName>
            </value>
            <value>
                <fullName>Agent/subSystemLocales</fullName>
            </value>
            <value>
                <fullName>Agent/country</fullName>
            </value>
            <value>
                <fullName>Agent/state</fullName>
            </value>
            <value>
                <fullName>Agent/county</fullName>
            </value>
            <value>
                <fullName>Agent/city</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>