force-app/main/default/objects/CornerstoneMappings__c/fields/TypeName__c.field-meta.xml
<CustomField>
    <fullName>TypeName__c</fullName>
    <externalId>true</externalId>
    <label>TypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>