force-app/main/default/objects/CornerstoneMappings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>TypeName__c</columns>
    <columns>LongValue__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CornerstoneID__c</columns>
    <columns>ParenetLookupKeyID__c</columns>
    <columns>ParentLookupItem__c</columns>
    <columns>ParentLookupItemKey__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>